# community.general

./: pr.md  pyproject.toml
.github/workflows/: ansible-test.yml
plugins/modules/: cargo.py
tests/integration/targets/cargo/lookup_plugins/: cargo_bins.py
tests/integration/targets/cargo/tasks/: main.yml  setup.yml  test_general.yml  test_version.yml
tests/sanity/: ignore-2.16.txt
