[build-system]
build-backend = "uv_build"
requires = [ "uv_build~=0.7" ]

[project]
name = "community.general"
version = "1.0.0"
requires-python = ">=3.11"

dependencies = [
  "ansible-core",
]

[dependency-groups]
dev = [
  "nox",
  "antsibull-nox",
  "yamllint",
]

[tool.uv]
package = false

[tool.uv.sources]
ansible-core = { path = "/data/data/com.termux/files/home/src/ansible/ansible" }

[tool.ruff.lint]
ignore = [
  "E402",
  "F404",
]
