[build-system]
build-backend = "uv_build"
requires = [ "uv_build" ]

[project]
name = "community.general"
version = "1.0.0"
requires-python = ">=3.8"

dependencies = [
  "ansible-core",
]

[dependency-groups]
dev = [
  "yamllint",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
ignore = [
  "E402",
  "F404",
]
