[build-system]
build-backend = "uv_build"
requires = [ "uv_build" ]

[project]
name = "community.general"
version = "1.0.0"
requires-python = ">=3.8"

dependencies = [
  "ansible",
]

[dependency-groups]
dev = [
  "yamllint",
]

[tool.uv]
package = false

[tool.ruff.lint]
ignore = [
  "E402",
  "F404",
]
